--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-20.0.0.tar.gz",
     "react-native-dropdownalert": "^2.8.0",
     "react-native-extended-stylesheet": "^0.6.0",
-    "react-navigation": "^1.0.0-beta.11"
+    "react-navigation": "^1.0.0-beta.11",
+    "react-redux": "^5.0.4",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.1"
   },
   "devDependencies": {
     "eslint-config-airbnb": "^15.1.0",
